# Unthink

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  compose.yaml  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: build-and-deploy.zh-CN.md  self-hosted-sync.md  selfhosted-sync-architecture.md  todofix.md
e2e/: web-platform.spec.ts
server/: README.md  go.mod
server/api/: events_test.go  server.go  server_test.go
server/attachmentstore/: store.go
server/cmd/tasks-server/: main.go
server/config/: config.go
server/database/: store.go  store_test.go
server/rustfs/: init.sh
src/: main.tsx  nls.ts  testIds.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src/cli/components/: DbListView.tsx  DbUseView.tsx  ErrorView.tsx  TodayView.tsx
src/core/: model.test.ts
src/desktop/: app.tsx  main.tsx
src/locales/: en-US.json  i18n.test.ts  i18n.ts  i18next.d.ts  zh-CN.json
src/mobile/: App.tsx  main.tsx  pages.tsx  theme.ts
tooling/: check-i18n.ts
tooling/vite-plugin-common-files/: index.ts
tooling/vite-plugin-detect-unused-files/: detect-unused-files.ts
tooling/vite-plugin-istanbul/: index.ts  source-map.ts
(+398 files in other folders)
