[package]
name = "unthink"
version = "0.1.0"
description = "Local-first task manager"
authors = ["HamsterBase Tasks contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "unthink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
